<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">Score of Life</string>
	<string name="action_settings">Settings</string>
	<string name="hello_world">Hello world!</string>
	<string name="title_activity_events">Manage Events</string>
	<string name="title_activity_input">Create Event</string>
	<string name="title_activity_score">My Score</string>
	<string name="title_activity_event_detail">Event</string>
	<string name="add_event">Add Event</string>
	<string name="my_score">My Score</string>
	<string name="manage_events">Manage Events</string>
	<string name="done">Done</string>
	<string name="edit">Edit</string>
	<string name="delete">Delete</string>
	<string name="current_events">Current Events</string>
	<string name="past_events">Past Events</string>
	<string name="future_events">Future Events</string>
	<string name="sync">Sync</string>
	<string name="sign_out">Sign Out</string>

</resources>