<menu xmlns:android="http://schemas.android.com/apk/res/android">

	<item
		android:id="@+id/add_event"
		android:orderInCategory="50"
		android:showAsAction="always"
		android:title="@string/add_event"/>
	<item
		android:id="@+id/current_events"
		android:orderInCategory="70"
		android:showAsAction="never"
		android:title="@string/current_events"/>
	<item
		android:id="@+id/past_events"
		android:orderInCategory="80"
		android:showAsAction="never"
		android:title="@string/past_events"/>
	<item
		android:id="@+id/future_events"
		android:orderInCategory="90"
		android:showAsAction="never"
		android:title="@string/future_events"/>
	<item
		android:id="@+id/sync"
		android:orderInCategory="100"
		android:showAsAction="never"
		android:title="@string/sync"/>
	<item
		android:id="@+id/sign_out"
		android:orderInCategory="500"
		android:showAsAction="never"
		android:title="@string/sign_out"/>

</menu>